@@ -1,0 +1,9 @@
+Title: mkeventd_status: rework graph templates, only group metrics where it makes sense'
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482233504
+Class: feature
+
+
