@@ -2,6 +2,7 @@
     Checks & Agents:
     * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
     * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured...
+    * 4198 mkeventd_status: rework graph templates, only group metrics where it makes sense'
     * 4005 agent_activemq: now able to provide BasicAuth credentials...
             NOTE: Please refer to the migration notes!
     * 4171 FIX: perle_psmu: fixed value error...
